fix(card): increase letter spacing in input text

--- a/assets/app/card.css
+++ b/assets/app/card.css
@@ -194,7 +194,7 @@ body .bottom_bar{
     height: max-content;
     margin-top: auto;
     margin-bottom: 0px;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.8px;
 }
 
 .id_image_data{
